<ScrollView 
    
	xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Fragemnet_Activity" >

<TableLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
android:layout_margin="10dp"
>

     <TextView
                android:id="@+id/tvTest"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:text="@string/intro"
                android:textSize="20dp"
                android:textStyle="bold"
                
                />   
    <TableRow 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblBinary"
        />

        <EditText
            android:id="@+id/etBin"
            android:layout_width="6dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal" />

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblDecimal" />

    <EditText
        android:id="@+id/etDeci"
        android:layout_width="6dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="numberDecimal"
        />
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
       <TextView 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/lblOctal"
           />
 		<EditText
 		    android:id="@+id/etOct"
 		    android:layout_width="6dp"
 		    android:layout_height="wrap_content"
 		    android:layout_weight="1"
 		    android:inputType="numberDecimal"
 		    />
        </TableRow>
        <TableRow 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblHex"
                />
            <EditText
                android:id="@+id/etHex"
                android:layout_width="6dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textCapCharacters"
                />
        </TableRow>
        <TableRow 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <Button
			    android:id="@+id/btnCopy"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="left"
			    android:text="@string/btnCopy"
			    android:layout_weight="1"
			    />
            <Button 
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnClear"
                android:gravity="center"
                />

            <Button
                android:id="@+id/btnQuit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="left"
                android:text="@string/btnQuit" />

        </TableRow>
  
</TableLayout>

</ScrollView>